[package]
name = "rust-crypto-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
hex = "0.4.3"
secp256k1 = { version = "0.30.0", features = ["rand"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tiny-keccak = "2.0.2"
tokio = { version = "1.43.0", features = ["full"] }
web3 = "0.19.0"
